--- a/src/components/Authentication/SocialMediaLogin/SocialMediaLogin.css
+++ b/src/components/Authentication/SocialMediaLogin/SocialMediaLogin.css
@@ -5,6 +5,13 @@
 }
 
 .social-media-btn {
-  background-color: gray;
+  background-color: white;
   padding: 10px 40px;
+  color: black;
+  outline: none;
+  border: none;
+}
+.social-media-btn:hover {
+  background-color: black;
+  color: white;
 }
