--- a/src/components/Pages/Home/Tools/Tools.css
+++ b/src/components/Pages/Home/Tools/Tools.css
@@ -1,5 +1,5 @@
 .tools-container {
-    margin: 100px 0;
+    margin: 150px 0 100px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     row-gap: 20px;
