my profile completed

--- a/src/components/Authentication/Login/Login.css
+++ b/src/components/Authentication/Login/Login.css
@@ -38,13 +38,8 @@
 }
 
 .form-button {
-  width: 80%;
+  /* width: 80%; */
   margin: 0 auto;
   display: flex;
   justify-content: center;
-}
-
-.form-container button {
-  width: 50%;
-  margin: 0 auto;
 }
