--- a/src/components/Authentication/Register/Register.css
+++ b/src/components/Authentication/Register/Register.css
@@ -1,21 +1,21 @@
 .register-background {
-    background-image: url('https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4wppn?ver=c334');
-    height: 100vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: rgba(0, 0, 0, 0.7);
-    background-blend-mode: overlay;
+  background-image: url("https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4wppn?ver=c334");
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.7);
+  background-blend-mode: overlay;
 }
 
 .form-container {
-    color: white;
-    padding-top: 8%;
+  color: white;
+  padding-top: 8%;
 }
 
 .form-container input {
-    background: transparent;
-    outline: none;
-    border: none;
-    background-color: rgba(0, 0, 0, 0.4);
+  background: transparent;
+  outline: none;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.4);
 }
