readme file updated

--- a/src/components/Pages/Home/Tools/Tool/Tool.css
+++ b/src/components/Pages/Home/Tools/Tool/Tool.css
@@ -1,5 +1,5 @@
 .tool-card {
-
+    height: 750px !important;
     border-radius: 30px;
     background: #e0e0e0;
     box-shadow: 15px 15px 30px #bebebe,
