--- a/src/components/Pages/Home/Partners/Partners.css
+++ b/src/components/Pages/Home/Partners/Partners.css
@@ -3,3 +3,20 @@
     grid-template-columns: repeat(6, 1fr);
     column-gap: 50px;
 }
+
+@media screen and (max-width: 480px) {
+    .partners {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        column-gap: 50px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .partners img {
+        width: 50%;
+        margin: 20px 0;
+    }
+}
