--- a/src/components/Pages/Home/Reviews/Reviews.css
+++ b/src/components/Pages/Home/Reviews/Reviews.css
@@ -63,3 +63,15 @@
 .reviewCard:active {
     --border-width: 5px;
 }
+
+@media screen and (max-width: 480px) {
+    .swiper-container {
+        width: 480px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .swiper-container {
+        width: 768px;
+    }
+}
