--- a/src/components/Pages/Home/SearchSection/SearchSection.css
+++ b/src/components/Pages/Home/SearchSection/SearchSection.css
@@ -32,3 +32,15 @@
 .search-button:hover {
     background-color: blue;
 }
+
+@media screen and (max-width: 480px) {
+    .search-container {
+        padding: 15px 10px;
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .search-button {
+        font-size: 16px !important;
+    }
+}
