--- a/src/components/Pages/Home/Tools/Tools.css
+++ b/src/components/Pages/Home/Tools/Tools.css
@@ -1,7 +1,16 @@
 .tools-container {
-    margin: 150px 0 100px;
+    margin: 150px 0 150px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     row-gap: 50px;
     column-gap: 50px;
+}
+
+@media screen and (max-width: 480px) {
+    .tools-container {
+        margin: 30px 0 30px 0;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        column-gap: 0px;
+    }
 }
