--- a/src/components/Pages/MyPortfolio/MyPortfolio.css
+++ b/src/components/Pages/MyPortfolio/MyPortfolio.css
@@ -1,6 +1,15 @@
-.skills {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  row-gap: 30px;
-  column-gap: 50px;
+.portfolio-container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+
+
+@media screen and (max-width: 480px) {
+  .portfolio-container {
+    width: 95%;
+  }
+
+
+
 }
